Documentation edits made through Mintlify web editor

--- a/api-reference/chat/create-response.mdx
+++ b/api-reference/chat/create-response.mdx
@@ -227,7 +227,7 @@ Creates a model response using a state-based approach with configurable nodes an
       
       <ResponseField name="type" type="string" required>
         The data type of the variable. Must be one of:
-        - `string`: A text value
+        - `string`: A string text value
         - `number`: A numeric value
         - `boolean`: A true/false value
         - `list`: A selection from predefined options
